@@ -326,7 +326,7 @@ namespace CIAO_Hello_Sender_Impl
     if (!this->ready_to_start_.value())
       {
         ACE_ERROR ((LM_ERROR, ACE_TEXT ("Sender_exec_i::stop - ")
-                              ACE_TEXT ("Sender never got ready to start")));
+                              ACE_TEXT ("Sender never got ready to start\n")));
       }
 
   }
